# pendulums

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
analysis/: frictionless_model.ipynb  frictionless_model_with_forcing.ipynb  math_model.ipynb
analysis/recordings/: cart_2023-06-13_16:03:43.csv  cart_2023-06-19_22:22:25.csv
pendulum/: cannon.py  cli.py  example.py  plot.py  projectile.py  recorder.py  settings.py  simulation.py  utils.py
pendulum/cart/: cli.py  controller.py  initial_conditions.py  lqr_params.csv  parameters.py  plot.py  simulator.py
pendulum/cart/initial_conditions/: rest_bottom.json  x_offset.json
pendulum/cart/parameters/: initial_angle.json  initial_angle_friction.json  initial_velocity.json  rest_bottom.json  rest_top.json  x_offset.json
pendulum/fixed/: cli.py  plot.py  simulator.py
pendulum/models/: cart_pendulum.py  entities.py  fixed_pendulum.py
pendulum/munk/: entities.py  utils.py
