[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pendulums"
version="0.1"
description="Simulation of an Inverted Pendulum."
authors=[{name="Mauricio Freitas"}]
urls={repo="https://github.com/meunomemauricio/pendulums"}
readme="README.md"
license={text = "GPL-3.0-only"}
requires-python=">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[project.scripts]
pendulum="pendulum.cli:cli"

[tool.setuptools]
packages=["pendulum"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 79

[[tool.mypy.overrides]]
module = [
    "imageio.*",
    "plotly.*",
    "pyglet.*",
]
ignore_missing_imports = true
